--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,10 +27,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t bulchack/docker-graphql:0.0.2 .
+        docker build -t bulchack/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
         docker push bulchack/docker-graphql:0.0.2
+        docker push bulchack/docker-graphql:latest
 
         
 #    - name: Build the Docker image
