Create image with automatic semantic version

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,15 +35,19 @@ jobs:
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "New version: $NEW_VERSION!!!!!!!!!!!!!"
 
-    #- name: Build Docker Image
-    #  run: |
-    #    docker build -t bulchack/docker-graphql:0.0.2 .
-    #    docker build -t bulchack/docker-graphql:latest .
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t bulchack/docker-graphql:$NEW_VERSION .
+        docker build -t bulchack/docker-graphql:latest .
 
-    #- name: Push Docker Image
-    #  run: |
-    #    docker push bulchack/docker-graphql:0.0.2
-    #    docker push bulchack/docker-graphql:latest
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push bulchack/docker-graphql:$NEW_VERSION
+        docker push bulchack/docker-graphql:latest
 
         
 #    - name: Build the Docker image
